--- a/css/main.css
+++ b/css/main.css
@@ -1,130 +1,597 @@
-/*! Minimalistic TailwindCSS Override */
-*, ::before, ::after {
-  box-sizing: border-box;
+/*! tailwindcss v3.3.3 | MIT License | https://tailwindcss.com*/
+*,
+:after,
+:before {
+	box-sizing: border-box;
+	border: 0 solid #e5e7eb
+}
+
+:after,
+:before {
+	--tw-content: ""
+}
+
+html {
+	line-height: 1.5;
+	-webkit-text-size-adjust: 100%;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+	font-family: Poppins, sans-serif;
+	font-feature-settings: normal;
+	font-variation-settings: normal
 }
 
 body {
-  font-family: 'Poppins', sans-serif;
-  background-color: #F5F7FA;
-  margin: 0;
-  color: #333;
-  line-height: 1.6;
+	margin: 0;
+	line-height: inherit
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 600;
-  color: #102A43;
+hr {
+	height: 0;
+	color: inherit;
+	border-top-width: 1px
+}
+
+abbr:where([title]) {
+	-webkit-text-decoration: underline dotted;
+	text-decoration: underline dotted
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	font-size: inherit;
+	font-weight: inherit
 }
 
 a {
-  color: #0066CC;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: inherit
 }
 
-/* Simplification and aesthetic adjustments */
-.flex {
-  display: flex;
-  gap: 20px;
+b,
+strong {
+	font-weight: bolder
 }
 
-.flex-col-reverse, .md:flex-row {
-  flex-direction: column-reverse;
+code,
+kbd,
+pre,
+samp {
+	font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, Courier New, monospace;
+	font-size: 1em
 }
 
-.items-center {
-  align-items: center;
+small {
+	font-size: 80%
 }
 
-.justify-center {
-  justify-content: center;
+sub,
+sup {
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: initial
+}
+
+sub {
+	bottom: -.25em
+}
+
+sup {
+	top: -.5em
+}
+
+table {
+	text-indent: 0;
+	border-color: inherit;
+	border-collapse: collapse
+}
+
+button,
+input,
+optgroup,
+select,
+textarea {
+	font-family: inherit;
+	font-feature-settings: inherit;
+	font-variation-settings: inherit;
+	font-size: 100%;
+	font-weight: inherit;
+	line-height: inherit;
+	color: inherit;
+	margin: 0;
+	padding: 0
+}
+
+button,
+select {
+	text-transform: none
+}
+
+[type=button],
+[type=reset],
+[type=submit],
+button {
+	-webkit-appearance: button;
+	background-color: initial;
+	background-image: none
+}
+
+:-moz-focusring {
+	outline: auto
+}
+
+:-moz-ui-invalid {
+	box-shadow: none
+}
+
+progress {
+	vertical-align: initial
+}
+
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button {
+	height: auto
+}
+
+[type=search] {
+	-webkit-appearance: textfield;
+	outline-offset: -2px
+}
+
+::-webkit-search-decoration {
+	-webkit-appearance: none
+}
+
+::-webkit-file-upload-button {
+	-webkit-appearance: button;
+	font: inherit
+}
+
+summary {
+	display: list-item
+}
+
+blockquote,
+dd,
+dl,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+p,
+pre {
+	margin: 0
+}
+
+fieldset {
+	margin: 0
+}
+
+fieldset,
+legend {
+	padding: 0
+}
+
+menu,
+ol,
+ul {
+	list-style: none;
+	margin: 0;
+	padding: 0
+}
+
+dialog {
+	padding: 0
+}
+
+textarea {
+	resize: vertical
+}
+
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+	opacity: 1;
+	color: #9ca3af
+}
+
+input::placeholder,
+textarea::placeholder {
+	opacity: 1;
+	color: #9ca3af
+}
+
+[role=button],
+button {
+	cursor: pointer
+}
+
+:disabled {
+	cursor: default
+}
+
+audio,
+canvas,
+embed,
+iframe,
+img,
+object,
+svg,
+video {
+	display: block;
+	vertical-align: middle
+}
+
+img,
+video {
+	max-width: 100%;
+	height: auto
+}
+
+[hidden] {
+	display: none
+}
+
+*,
+::backdrop,
+:after,
+:before {
+	--tw-border-spacing-x: 0;
+	--tw-border-spacing-y: 0;
+	--tw-translate-x: 0;
+	--tw-translate-y: 0;
+	--tw-rotate: 0;
+	--tw-skew-x: 0;
+	--tw-skew-y: 0;
+	--tw-scale-x: 1;
+	--tw-scale-y: 1;
+	--tw-pan-x: ;
+	--tw-pan-y: ;
+	--tw-pinch-zoom: ;
+	--tw-scroll-snap-strictness: proximity;
+	--tw-gradient-from-position: ;
+	--tw-gradient-via-position: ;
+	--tw-gradient-to-position: ;
+	--tw-ordinal: ;
+	--tw-slashed-zero: ;
+	--tw-numeric-figure: ;
+	--tw-numeric-spacing: ;
+	--tw-numeric-fraction: ;
+	--tw-ring-inset: ;
+	--tw-ring-offset-width: 0px;
+	--tw-ring-offset-color: #fff;
+	--tw-ring-color: #3b82f680;
+	--tw-ring-offset-shadow: 0 0 #0000;
+	--tw-ring-shadow: 0 0 #0000;
+	--tw-shadow: 0 0 #0000;
+	--tw-shadow-colored: 0 0 #0000;
+	--tw-blur: ;
+	--tw-brightness: ;
+	--tw-contrast: ;
+	--tw-grayscale: ;
+	--tw-hue-rotate: ;
+	--tw-invert: ;
+	--tw-saturate: ;
+	--tw-sepia: ;
+	--tw-drop-shadow: ;
+	--tw-backdrop-blur: ;
+	--tw-backdrop-brightness: ;
+	--tw-backdrop-contrast: ;
+	--tw-backdrop-grayscale: ;
+	--tw-backdrop-hue-rotate: ;
+	--tw-backdrop-invert: ;
+	--tw-backdrop-opacity: ;
+	--tw-backdrop-saturate: ;
+	--tw-backdrop-sepia:
+}
+
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0
 }
 
 .m-auto {
-  margin: auto;
+	margin: auto
 }
 
-.w-full, .md:w-3/5, .md:w-1/3 {
-  width: 100%;
+.my-5 {
+	margin-top: 1.25rem;
+	margin-bottom: 1.25rem
 }
 
-.p-10 {
-  padding: 40px;
+.mb-10 {
+	margin-bottom: 2.5rem
+}
+
+.mb-2 {
+	margin-bottom: .5rem
+}
+
+.mb-4 {
+	margin-bottom: 1rem
+}
+
+.mb-6 {
+	margin-bottom: 1.5rem
+}
+
+.ml-3 {
+	margin-left: .75rem
+}
+
+.mr-2 {
+	margin-right: .5rem
+}
+
+.mt-20 {
+	margin-top: 5rem
+}
+
+.mt-4 {
+	margin-top: 1rem
+}
+
+.mt-5 {
+	margin-top: 1.25rem
+}
+
+.block {
+	display: block
+}
+
+.inline {
+	display: inline
+}
+
+.flex {
+	display: flex
+}
+
+.h-10 {
+	height: 2.5rem
+}
+
+.h-24 {
+	height: 6rem
+}
+
+.w-1\/2 {
+	width: 50%
+}
+
+.w-1\/3 {
+	width: 33.333333%
+}
+
+.w-16 {
+	width: 4rem
+}
+
+.w-24 {
+	width: 6rem
+}
+
+.w-full {
+	width: 100%
+}
+
+.max-w-5xl {
+	max-width: 64rem
+}
+
+.transform {
+	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
+}
+
+@keyframes spin {
+	to {
+		transform: rotate(1turn)
+	}
+}
+
+.animate-spin {
+	animation: spin 1s linear infinite
+}
+
+.flex-col {
+	flex-direction: column
+}
+
+.flex-col-reverse {
+	flex-direction: column-reverse
+}
+
+.items-center {
+	align-items: center
+}
+
+.justify-center {
+	justify-content: center
+}
+
+.gap-x-32 {
+	-moz-column-gap: 8rem;
+	column-gap: 8rem
+}
+
+.self-center {
+	align-self: center
 }
 
 .rounded {
-  border-radius: 0.375rem;
+	border-radius: .25rem
 }
 
-.border-2, .border-gray-200 {
-  border-width: 2px;
-  border-color: #E2E8F0;
+.border-2 {
+	border-width: 2px
+}
+
+.border-gray-200 {
+	--tw-border-opacity: 1;
+	border-color: rgb(229 231 235/var(--tw-border-opacity))
 }
 
 .bg-blue-500 {
-  background-color: #007bff;
+	--tw-bg-opacity: 1;
+	background-color: rgb(59 130 246/var(--tw-bg-opacity))
 }
 
-.text-blue-500, .hover\:bg-blue-400:hover {
-  color: #007bff;
+.bg-gradient-to-r {
+	background-image: linear-gradient(to right, var(--tw-gradient-stops))
 }
 
-.text-gray-500, .text-gray-900 {
-  color: #4A5568;
+.from-purple-500 {
+	--tw-gradient-from: #a855f7 var(--tw-gradient-from-position);
+	--tw-gradient-to: #a855f700 var(--tw-gradient-to-position);
+	--tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to)
 }
 
-input[type="url"], select, input[type="color"] {
-  width: 100%;
-  padding: 0.5rem 1rem;
-  margin-bottom: 16px;
-  border: 1px solid #CBD5E0;
-  border-radius: 0.375rem;
-  line-height: 1.75;
+.to-blue-500 {
+	--tw-gradient-to: #3b82f6 var(--tw-gradient-to-position)
 }
 
-button {
-  display: inline-block;
-  background-color: #007bff;
-  color: white;
-  padding: 0.625rem 1.25rem;
-  font-size: 1rem;
-  border-radius: 0.375rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease-in-out;
+.fill-gray-500 {
+	fill: #6b7280
 }
 
-button:hover {
-  background-color: #0056b3;
+.p-10 {
+	padding: 2.5rem
 }
 
-/* Responsive design adjustments */
-@media (min-width: 768px) {
-  .md:flex-row {
-    flex-direction: row;
-  }
-
-  .md:max-w-6xl {
-    max-width: 96rem;
-  }
-
+.p-3 {
+	padding: .75rem
 }
 
-/* QR code generator specific styles */
-#qrcode {
-  margin-top: 2rem;
+.px-4 {
+	padding-left: 1rem;
+	padding-right: 1rem
 }
 
-#spinner {
-  display: none;
+.py-2 {
+	padding-top: .5rem;
+	padding-bottom: .5rem
 }
 
-/* Further minimalistic touch-ups */
-form > label {
-  font-weight: 500;
-  margin-bottom: 0.5rem;
+.py-3 {
+	padding-top: .75rem;
+	padding-bottom: .75rem
 }
 
-input::placeholder {
-  color: #A0AEC0;
+.text-center {
+	text-align: center
 }
 
-/* Utilizing TailwindCSS structure for custom minimalistic design */
+.align-middle {
+	vertical-align: middle
+}
+
+.text-3xl {
+	font-size: 1.875rem;
+	line-height: 2.25rem
+}
+
+.text-4xl {
+	font-size: 2.25rem;
+	line-height: 2.5rem
+}
+
+.text-sm {
+	font-size: .875rem;
+	line-height: 1.25rem
+}
+
+.font-bold {
+	font-weight: 700
+}
+
+.font-extrabold {
+	font-weight: 800
+}
+
+.text-blue-500 {
+	--tw-text-opacity: 1;
+	color: rgb(59 130 246/var(--tw-text-opacity))
+}
+
+.text-gray-500 {
+	--tw-text-opacity: 1;
+	color: rgb(107 114 128/var(--tw-text-opacity))
+}
+
+.text-gray-900 {
+	--tw-text-opacity: 1;
+	color: rgb(17 24 39/var(--tw-text-opacity))
+}
+
+.text-white {
+	--tw-text-opacity: 1;
+	color: rgb(255 255 255/var(--tw-text-opacity))
+}
+
+.hover\:bg-blue-400:hover {
+	--tw-bg-opacity: 1;
+	background-color: rgb(96 165 250/var(--tw-bg-opacity))
+}
+
+.focus\:outline-none:focus {
+	outline: 2px solid #0000;
+	outline-offset: 2px
+}
+
+@media (min-width:768px) {
+	.md\:w-1\/3 {
+		width: 33.333333%
+	}
+
+	.md\:w-3\/5 {
+		width: 60%
+	}
+
+	.md\:w-full {
+		width: 100%
+	}
+
+	.md\:max-w-6xl {
+		max-width: 72rem
+	}
+
+	.md\:flex-row {
+		flex-direction: row
+	}
+
+	.md\:py-6 {
+		padding-top: 1.5rem;
+		padding-bottom: 1.5rem
+	}
+
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem
+	}
+
+	.md\:text-5xl {
+		font-size: 3rem;
+		line-height: 1
+	}
+
+	.md\:text-lg {
+		font-size: 1.125rem;
+		line-height: 1.75rem
+	}
+}
