--- a/css/main.css
+++ b/css/main.css
@@ -391,9 +391,46 @@ video {
 	width: 100%
 }
 
+/* Base mobile styles */
 .max-w-5xl {
-	max-width: 68rem
+  max-width: 100%;
 }
+
+/* Small devices (larger than 640px) */
+@media (min-width: 640px) {
+  .max-w-5xl {
+    max-width: 90%;
+  }
+}
+
+/* Medium devices (larger than 768px) */
+@media (min-width: 768px) {
+  .max-w-5xl {
+    max-width: 85%;
+  }
+}
+
+/* Large devices (larger than 1024px) */
+@media (min-width: 1024px) {
+  .max-w-5xl {
+    max-width: 80%;
+  }
+}
+
+/* Extra large devices (larger than 1280px) */
+@media (min-width: 1280px) {
+  .max-w-5xl {
+    max-width: 75%;
+  }
+}
+
+/* Extra extra large devices (larger than 1536px) */
+@media (min-width: 1536px) {
+  .max-w-5xl {
+    max-width: 68rem; /* Or whatever max-width you prefer */
+  }
+}
+
 
 .transform {
 	transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
