--- a/css/main.css
+++ b/css/main.css
@@ -394,7 +394,7 @@ video {
 /* Base mobile styles */
 .max-w-5xl {
   max-width: 68rem;
-  padding: 2.5rem ;
+  padding: 0.6rem ;
 }
 
 .transform {
@@ -488,6 +488,11 @@ video {
 .py-2 {
 	padding-top: .5rem;
 	padding-bottom: .5rem
+}
+
+.py-3 {
+	padding-top: .75rem;
+	padding-bottom: .75rem
 }
 
 .text-center {
